--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,25 +12,29 @@
             padding: 20px;
             background-color: #f5f5f5;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             background: white;
             padding: 40px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+
         h1 {
             color: #0073aa;
             text-align: center;
             margin-bottom: 30px;
         }
+
         .plugin-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
             margin-top: 30px;
         }
+
         .plugin-card {
             border: 1px solid #ddd;
             border-radius: 8px;
@@ -37,25 +42,30 @@
             background: #fff;
             transition: transform 0.2s;
         }
+
         .plugin-card:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
+
         .plugin-title {
             color: #0073aa;
             font-size: 18px;
             margin-bottom: 10px;
             font-weight: bold;
         }
+
         .plugin-description {
             color: #666;
             margin-bottom: 15px;
             line-height: 1.5;
         }
+
         .plugin-links {
             display: flex;
             gap: 10px;
         }
+
         .btn {
             padding: 8px 15px;
             text-decoration: none;
@@ -63,20 +73,25 @@
             font-size: 14px;
             transition: background-color 0.2s;
         }
+
         .btn-demo {
             background-color: #0073aa;
             color: white;
         }
+
         .btn-demo:hover {
             background-color: #005a87;
         }
+
         .btn-github {
             background-color: #333;
             color: white;
         }
+
         .btn-github:hover {
             background-color: #555;
         }
+
         .footer {
             text-align: center;
             margin-top: 40px;
@@ -86,6 +101,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>WordPress Plugins Collection</h1>
@@ -100,8 +116,9 @@
                     Plugin básico de WordPress con funcionalidades esenciales para desarrollo.
                 </div>
                 <div class="plugin-links">
-                    <a href="./mi-plugin-basico/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/mi-plugin-basico" class="btn btn-github">GitHub</a>
+                    <a href="./mi-plugin-basico/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/mi-plugin-basico"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -111,8 +128,9 @@
                     Generador automático de texto alternativo para imágenes usando IA.
                 </div>
                 <div class="plugin-links">
-                    <a href="./alt-generator-text/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/alt-generator-text" class="btn btn-github">GitHub</a>
+                    <a href="./alt-generator-text/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/alt-generator-text"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -122,8 +140,9 @@
                     Generador de contenido usando inteligencia artificial para WordPress.
                 </div>
                 <div class="plugin-links">
-                    <a href="./content-ai-generator/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/content-ai-generator" class="btn btn-github">GitHub</a>
+                    <a href="./content-ai-generator/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/content-ai-generator"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -133,8 +152,9 @@
                     Chatbot inteligente para responder preguntas frecuentes automáticamente.
                 </div>
                 <div class="plugin-links">
-                    <a href="./faq-chatbot/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/faq-chatbot" class="btn btn-github">GitHub</a>
+                    <a href="./faq-chatbot/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/faq-chatbot"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -144,8 +164,9 @@
                     Plugin para personalizar y gestionar el footer de tu sitio WordPress.
                 </div>
                 <div class="plugin-links">
-                    <a href="./mi-plugin-footer/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/mi-plugin-footer" class="btn btn-github">GitHub</a>
+                    <a href="./mi-plugin-footer/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/mi-plugin-footer"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -155,8 +176,9 @@
                     Plugin base para crear formularios personalizados en WordPress.
                 </div>
                 <div class="plugin-links">
-                    <a href="./plugin-base-form/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/plugin-base-form" class="btn btn-github">GitHub</a>
+                    <a href="./plugin-base-form/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/plugin-base-form"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -166,8 +188,9 @@
                     Sistema inteligente de redirecciones para errores 404 en WordPress.
                 </div>
                 <div class="plugin-links">
-                    <a href="./Smart404-Redirect/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/Smart404-Redirect" class="btn btn-github">GitHub</a>
+                    <a href="./Smart404-Redirect/demo.html" class="btn btn-demo">Ver Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/Smart404-Redirect"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
 
@@ -177,8 +200,11 @@
                     Plantilla base para el desarrollo rápido de plugins de WordPress.
                 </div>
                 <div class="plugin-links">
-                    <a href="./PLUGIN-TEMPLATE/" class="btn btn-demo">Ver Demo</a>
-                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/PLUGIN-TEMPLATE" class="btn btn-github">GitHub</a>
+                    <a href="#" class="btn btn-demo"
+                        onclick="alert('🚀 Este es nuestro template base para crear nuevos plugins. ¡Descárgalo y úsalo como punto de partida para tus propios desarrollos!')">Ver
+                        Demo</a>
+                    <a href="https://github.com/techsoyo/wordpress-plugins-collection/tree/master/PLUGIN-TEMPLATE"
+                        class="btn btn-github">GitHub</a>
                 </div>
             </div>
         </div>
@@ -193,4 +219,5 @@
         </div>
     </div>
 </body>
+
 </html>
